fixed menu not fitting option in

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ footer {
 }
 .right{
   position: absolute;
-  right: 100px;
+  right: 500px;
   width: 400px;
   padding: 10px;
   height: 333px;
